session based progression completed

--- a/config.yml
+++ b/config.yml
@@ -6,8 +6,13 @@ ANIMAL_CODE: "MSIMD-2123"
 TASKS:
   - TASK_NAME: "supertask_min"
     PROGRESSION_TYPE: "target_based"
-    TARGET_TRIALS: 1
+    TARGET_TRIALS: 2
   - TASK_NAME: "supertask_min"
     PROGRESSION_TYPE: "rolling_average"
     SUCCESS_RATE: 0.8
     ROLLING_WINDOW_SIZE: 2
+  - TASK_NAME: "supertask_min"
+    PROGRESSION_TYPE: "session_based"
+    TARGET_TRIALS: 3
+    TARGET_SESSIONS: 2
+    SUCCESS_RATE: 0.8
