--- a/installation/lightdm.conf
+++ b/installation/lightdm.conf
@@ -123,7 +123,7 @@ user-session=xfce4
 #session-setup-script=
 #session-cleanup-script=
 #autologin-guest=false
-autologin-user=jack
+autologin-user=fanay
 autologin-user-timeout=0
 #autologin-in-background=false
 #autologin-session=
