--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# .ignore directory for development artifacts to be saved locally but not
+# tracked/committed by git
+/.ignore
