--- a/logging.ini
+++ b/logging.ini
@@ -10,6 +10,7 @@ keys=consoleFormatter,fileFormatter
 
 [logger_root]
 level=DEBUG
+# handlers=
 handlers=consoleHandler,fileHandler
 
 [handler_consoleHandler]
