--- a/bin/install/callicog.desktop
+++ b/bin/install/callicog.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Type=Application
-Name=Callicog server
-Exec=bash -c "source ~/callicogenv/bin/activate && cd ~/callicog && bash server.sh; bash" -T "Callicog ready"
+Name=CalliCog Task Agent
+Exec=bash -c "cd $HOME/callicog && source .env && source $CALLICOG_VENV/bin/activate && callicog start agent --dummy; bash" -T "CalliCog Task Agent started..."
 Terminal=true
