Add image dir to .env template

--- a/.env.template
+++ b/.env.template
@@ -18,6 +18,7 @@
 CALLICOG_USER=callicog
 CALLICOG_DIR=$HOME/callicog
 CALLICOG_VENV=$CALLICOG_DIR/.venv
+CALLICOG_TASK_IMAGE_DIR=$CALLICOG_DIR/src/callicog/tasks/images
 
 # DB
 CALLICOG_DB_USER=callicog
