Tweaks to stuff

--- a/.env.template
+++ b/.env.template
@@ -19,6 +19,8 @@ CALLICOG_USER=callicog
 CALLICOG_DIR=$HOME/callicog
 CALLICOG_VENV=$CALLICOG_DIR/.venv
 CALLICOG_TASK_IMAGE_DIR=$CALLICOG_DIR/src/callicog/tasks/images
+CALLICOG_DISPLAY=HDMI-1
+#CALLICOG_DISPLAY=HDMI-2
 
 # DB
 CALLICOG_DB_USER=callicog
